cmake_minimum_required(VERSION 3.19)
project(Template_STL)

set(CMAKE_CXX_STANDARD 14)

# Template
#add_executable(TemplateDemo TemplateDemo/01_functionTemplateBase.cpp)
#add_executable(TemplateDemo TemplateDemo/02_functionTemplatePrecautions.cpp)
#add_executable(TemplateDemo TemplateDemo/03_functionTemplateSort.cpp)
#add_executable(TemplateDemo TemplateDemo/04_functionTemplateTypeConversion.cpp)
#add_executable(TemplateDemo TemplateDemo/05_functionTemplateTransfer.cpp)
#add_executable(TemplateDemo TemplateDemo/06_functionTemplateReification.cpp)

#add_executable(TemplateClass TemplateClass/01_classTemplateBase.cpp)
#add_executable(TemplateClass TemplateClass/02_classTemplateBase.cpp)
#add_executable(TemplateClass TemplateClass/03_classTemplateWhenToCreate.cpp)
#add_executable(TemplateClass TemplateClass/04_classTemplateObjectDoParameter.cpp)
#add_executable(TemplateClass TemplateClass/05_classTemplateInherit.cpp)
#add_executable(TemplateClass TemplateClass/06_classTemplateFunctionCreateOutside.cpp)

#add_executable(TemplateClass TemplateClass/07_classTemplateSubDocument_01/person.h
#               TemplateClass/07_classTemplateSubDocument_01/person.cpp
#               TemplateClass/07_classTemplateSubDocument_01/person_Main.cpp)

#add_executable(TemplateClass TemplateClass/07_classTemplateSubDocument_02/person.hpp
#               TemplateClass/07_classTemplateSubDocument_02/person_Main.cpp)

#add_executable(TemplateClass TemplateClass/08_classTemplateFriendFunction.cpp)

#add_executable(TemplateArray TemplateArray/fArray.hpp TemplateArray/fArray_Main.cpp)

# STL Base
#add_executable(STL STL/STL_Base/STL_Vector_Preview.cpp)
#add_executable(STL STL/STL_Base//STL_Vector_DefineData.cpp)
#add_executable(STL STL/STL_Base/STL_vector_Nested.cpp)

# STL String
#add_executable(STL STL/STL_String/STL_String_Constructor.cpp)
#add_executable(STL STL/STL_String/STL_String_Assignment.cpp)
#add_executable(STL STL/STL_String/STL_String_Splicing.cpp)
#add_executable(STL STL/STL_String/STL_String_Find.cpp)
#add_executable(STL STL/STL_String/STL_String_Compare.cpp)
#add_executable(STL STL/STL_String/STL_String_Access.cpp)
#add_executable(STL STL/STL_String/STL_String_InsertAndDelete.cpp)
#add_executable(STL STL/STL_String/STL_String_SubString.cpp)

# STL Vector
#add_executable(STL STL/STL_Vector/STL_Vector_Constructor.cpp)
#add_executable(STL STL/STL_Vector/STL_Vector_Assignment.cpp)
add_executable(STL STL/STL_Vector/STL_Vector_SizeAndCapacity.cpp)